[gd_scene load_steps=6 format=3 uid="uid://7wrtqekwjrw0"]

[ext_resource type="Script" path="res://Scenes/towers/mac_penguin_tower.gd" id="1_pbpad"]
[ext_resource type="Texture2D" uid="uid://d1r01m0dwlo26" path="res://Assets/sprites/MacPenguin/MacPenguin1.png" id="2_iy4b2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xnja"]
size = Vector2(107, 104)

[sub_resource type="CircleShape2D" id="CircleShape2D_nh4v1"]
radius = 400.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_odewr"]
corner_radius_top_left = 450
corner_radius_top_right = 450
corner_radius_bottom_right = 450
corner_radius_bottom_left = 450

[node name="macPenguinTower" type="StaticBody2D"]
script = ExtResource("1_pbpad")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9.5, 1)
shape = SubResource("RectangleShape2D_0xnja")

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(73, 0)

[node name="macpenguinTower" type="Sprite2D" parent="."]
position = Vector2(6.97027, 1.52974)
rotation = 1.5708
scale = Vector2(8, 8)
texture = ExtResource("2_iy4b2")

[node name="Tower" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tower"]
shape = SubResource("CircleShape2D_nh4v1")

[node name="BulletContainer" type="Node" parent="."]

[node name="FiringTimer" type="Timer" parent="."]

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.45098, 1, 1, 0.0862745)
offset_left = -400.0
offset_top = -403.0
offset_right = 400.0
offset_bottom = 397.0
theme_override_styles/panel = SubResource("StyleBoxFlat_odewr")

[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="body_exited" from="Tower" to="." method="_on_tower_body_exited"]
[connection signal="timeout" from="FiringTimer" to="." method="_on_BulletTimer_timeout"]
